<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
            android:fragment="jp.co.ryoto1993.httpledcontroller.SettingsActivity$GeneralPreferenceFragment"
            android:title="@string/pref_header_general"
            android:icon="@drawable/ic_info_black_24dp"/>

    <header
            android:fragment="jp.co.ryoto1993.httpledcontroller.SettingsActivity$NetworkPreferenceFragment"
            android:title="@string/pref_header_network"
            android:icon="@drawable/ic_web"/>

    <header
            android:fragment="jp.co.ryoto1993.httpledcontroller.SettingsActivity$DataSyncPreferenceFragment"
            android:title="@string/pref_header_data_sync"
            android:icon="@drawable/ic_sync_black_24dp"/>

</preference-headers>
