<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:flatui="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="jp.co.ryoto1993.httpledcontroller.ColorSelectorFragment">


    <LinearLayout
            android:id="@+id/layoutRed"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/label_R"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/labelR" android:layout_weight="0.1"
                android:textSize="36sp"
                android:gravity="center_vertical" android:textAlignment="center" android:textColor="@color/blood_dark"/>
        <com.cengalabs.flatui.views.FlatSeekBar
                android:id="@+id/seekBarRed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:max="1000"
                flatui:fl_theme="@array/blood"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/labelRedValue" android:layout_weight="0.16"
                android:textSize="36sp"
                android:gravity="center_vertical" android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/layoutGreen"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/layoutRed" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/label_G"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/labelG" android:layout_weight="0.1"
                android:textSize="36sp"
                android:gravity="center_vertical" android:textAlignment="center"
                android:textColor="@color/grass_darker"/>
        <com.cengalabs.flatui.views.FlatSeekBar
                android:id="@+id/seekBarGreen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:max="1000"
                flatui:fl_theme="@array/grass"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/labelGreenValue" android:layout_weight="0.16"
                android:textSize="36sp"
                android:gravity="center_vertical" android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/layoutBlue"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/layoutGreen" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/label_B"
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/labelB" android:layout_weight="0.1"
                android:textSize="36sp"
                android:gravity="center_vertical" android:textAlignment="center" android:textColor="@color/sea_darker"/>
        <com.cengalabs.flatui.views.FlatSeekBar
                android:id="@+id/seekBarBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:max="1000"
                flatui:fl_theme="@array/sea"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent" android:id="@+id/labelBlueValue" android:layout_weight="0.16"
                android:textSize="36sp"
                android:gravity="center_vertical" android:textAlignment="center"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
